Bugfix: Add missing color

--- a/styles/base.less
+++ b/styles/base.less
@@ -111,10 +111,10 @@ atom-text-editor .search-results .marker.current-result .region,
 }
 
 .variable {
-  color: @red;
+  color: @purple;
 
   &.interpolation {
-    color: darken(@red, 10%);
+    color: darken(@purple, 10%);
   }
 
   &.parameter.function {
@@ -140,7 +140,7 @@ atom-text-editor .search-results .marker.current-result .region,
   }
 
   &.other.link {
-    color: @red;
+    color: @pink;
   }
 }
 
@@ -163,7 +163,7 @@ atom-text-editor .search-results .marker.current-result .region,
     }
 
     &.bold {
-      color: @light-malve;
+      color: @light-purple;
       font-weight: bold;
     }
 
@@ -174,14 +174,14 @@ atom-text-editor .search-results .marker.current-result .region,
   }
 
   &.section.embedded {
-    color: darken(@red, 10%);
+    color: darken(@raspberry, 10%);
   }
 
 }
 
 .support {
   &.class {
-    color: @light-malve;
+    color: @light-purple;
   }
 
   &.function  {
@@ -198,7 +198,7 @@ atom-text-editor .search-results .marker.current-result .region,
     color: @light-turquoise;
   }
   &.name.type {
-    color: @light-malve;
+    color: @light-purple;
     text-decoration: underline;
   }
 
@@ -206,7 +206,7 @@ atom-text-editor .search-results .marker.current-result .region,
     color: @green;
   }
   &.name.class, &.name.type.class {
-    color: @light-malve;
+    color: @light-purple;
   }
 
   &.name.section {
@@ -214,7 +214,7 @@ atom-text-editor .search-results .marker.current-result .region,
   }
 
   &.name.tag {
-    color: @red;
+    color: @medium-green;
     text-decoration: underline;
   }
 
@@ -229,7 +229,7 @@ atom-text-editor .search-results .marker.current-result .region,
 
 .meta {
   &.class {
-    color: @light-malve;
+    color: @purple;
   }
 
   &.link {
@@ -282,7 +282,7 @@ atom-text-editor .search-results .marker.current-result .region,
   }
 
   &.list {
-    color: @red;
+    color: @darker-blue;
   }
 
   &.quote {
