--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,9 +1,9 @@
 @blue: #35a6ff;
-@medium-light-turquoise: #0098ff;
-@darker-light-turquoise: #2a8af5;
-@dark-light-turquoise: #112668;
-@very-dark-light-turquoise: #121a26;
-@darkest-light-turquoise: #0d141f;
+@medium-blue: #0098ff;
+@darker-blue: #2a8af5;
+@dark-blue: #112668;
+@very-dark-blue: #121a26;
+@darkest-blue: #0d141f;
 @turquoise: #0cc;
 @light-turquoise: #5bffd3;
 @light-green: #00f2a5;
@@ -25,3 +25,4 @@
 @light-gray: #969896;
 // Current line highlight
 @gray: #373b41;
+@dark-gray: #34393f;
