--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -7,7 +7,7 @@
 @syntax-text-color: @purple;
 @syntax-cursor-color: white;
 @syntax-selection-color: lighten(@dark-gray, 10%);
-@syntax-background-color: @very-dark-light-turquoise;
+@syntax-background-color: @very-dark-blue;
 
 // Guide colors
 @syntax-wrap-guide-color: @dark-gray;
@@ -21,7 +21,7 @@
 // Gutter colors
 @syntax-gutter-text-color: @purple;
 @syntax-gutter-text-color-selected: @syntax-gutter-text-color;
-@syntax-gutter-background-color: @darkest-light-turquoise;
+@syntax-gutter-background-color: @darkest-blue;
 @syntax-gutter-background-color-selected: @gray;
 
 // For git diff info. i.e. in the gutter
